--- a/HW11_DOM/index.html
+++ b/HW11_DOM/index.html
@@ -1,36 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    ul {
-      list-style: none;
-      padding: 0;
-      width: 260px;
+    * {
+      box-sizing: border-box;
     }
 
-    li {
-      border: 1px solid black;
+    .form,
+    .list_container {
+      width: 300px;
+      margin-bottom: 10px;
+    }
+
+    .form {
+      display: flex;
+      justify-content: space-between;
+      padding: 10px 5px;
+      font-weight: bold;
+    }
+
+    .card_item {
+      border: 1px solid #797979;
       margin: 3px 0;
       padding: 5px;
       display: flex;
       align-items: center;
-      background-color: #a9a9a9;
+      background-color: #5e98e4;
     }
 
-    li:nth-child(2n) {
-      background-color: #d4d3d3;
+    .card_item:nth-child(2n) {
+      background-color: #9ac0f3;
     }
 
-    .user {
+    .username {
       flex-grow: 1;
     }
   </style>
 </head>
+
 <body>
   <div id='wrapper'></div>
   <script src="script.js"></script>
 </body>
+
 </html>
