--- a/HW12_DOM_Event/Task_1/index.html
+++ b/HW12_DOM_Event/Task_1/index.html
@@ -20,22 +20,21 @@
       position: relative;
     }
 
-    #count {
+    .square div {
       width: 100%;
       height: 100%;
       line-height: 140px;
       font-size: 30px;
     }
 
-    #plus-btn,
-    #minus-btn {
+    button {
       position: absolute;
       left: 23px;
       top: 0;
       width: 50px;
     }
 
-    #plus-btn {
+    button:nth-child(2) {
       left: 77px;
     }
   </style>
@@ -45,33 +44,33 @@
   <div id="wrapper">
 
     <div class="square blue">
-      <button id="minus-btn">-</button>
-      <button id="plus-btn">+</button>
-      <div id="count">0</div>
+      <button data-id="minus-btn">-</button>
+      <button data-id="plus-btn">+</button>
+      <div data-id="count">0</div>
     </div>
 
     <div class="square blue">
-      <button id="minus-btn">-</button>
-      <button id="plus-btn">+</button>
-      <div id="count">0</div>
+      <button data-id="minus-btn">-</button>
+      <button data-id="plus-btn">+</button>
+      <div data-id="count">0</div>
     </div>
 
     <div class="square blue">
-      <button id="minus-btn">-</button>
-      <button id="plus-btn">+</button>
-      <div id="count">0</div>
+      <button data-id="minus-btn">-</button>
+      <button data-id="plus-btn">+</button>
+      <div data-id="count">0</div>
     </div>
 
     <div class="square blue">
-      <button id="minus-btn">-</button>
-      <button id="plus-btn">+</button>
-      <div id="count">0</div>
+      <button data-id="minus-btn">-</button>
+      <button data-id="plus-btn">+</button>
+      <div data-id="count">0</div>
     </div>
 
     <div class="square blue">
-      <button id="minus-btn">-</button>
-      <button id="plus-btn">+</button>
-      <div id="count">0</div>
+      <button data-id="minus-btn">-</button>
+      <button data-id="plus-btn">+</button>
+      <div data-id="count">0</div>
     </div>
   </div>
 
