--- a/HW15_Watch/index.html
+++ b/HW15_Watch/index.html
@@ -8,59 +8,24 @@
   <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
 </head>
 <style>
-  body {
-    font-family: 'Fredoka One', cursive;
-    font-size: 180px;
-    font-weight: bold;
-  }
-
-  .container {
+  .clock {
+    padding-top: 100px;
+    font-size: 250px;
     display: flex;
-    padding-top: 50px;
     justify-content: center;
-  }
-
-  .container div {
-    width: 160px;
-    height: 220px;
-    text-align: center;
-  }
-
-  .container .separator {
-    width: 50px;
-  }
-
-  .separator {
-    color: #6b2222;
-  }
-
-  .hour-first {
-    color: red;
-  }
-
-  .hour-second {
-    color: orange;
-  }
-
-  .minute-first {
-    color: green;
-  }
-
-  .minute-second {
-    color: rgb(42, 152, 255);
-  }
-
-  .second-first {
-    color: blue;
-  }
-
-  .second-second {
-    color: purple;
   }
 </style>
 
 <body>
-  <div id="wrapper"></div>
+  <div id="wrapper">
+
+    <select name="clock-format">
+      <option value="format1">HH:mm:ss</option>
+      <option value="format2">HH:mm</option>
+      <option value="format3">HH:mm:ss PM</option>
+    </select>
+
+  </div>
 
   <script src="script.js"></script>
 </body>
