--- a/HW17_LocalStorage/index.html
+++ b/HW17_LocalStorage/index.html
@@ -1,45 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    body {
+    * {
+      box-sizing: border-box;
+    }
+
+    #wrapper {
+      width: 300px;
+      margin: 0 auto;
+    }
+
+    .user-item {
       display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    ul {
-      width: 320px;
-      list-style: none;
+      justify-content: space-between;
       padding: 5px;
-      border: 2px solid orange;
-      border-radius: 10px;
-      box-shadow: 0 5px 10px 2px lightgray;
+      margin: 5px 0;
+      background-color: lightsteelblue;
+      border: 1px solid gray;
+      border-radius: 3px;
     }
 
-    span {
-      padding: 0 10px;
-      font-weight: bold;
-    }
-
-    li {
-      padding: 2px 5px;
-    }
-
-    li:nth-child(2n) {
-      background-color: #e6e6e6;
-    }
-
-    button {
-      padding: 5px 10px;
+    input[type="text"] {
+      width: 255px;
+      margin: 10px 0;
     }
   </style>
 </head>
+
 <body>
-  
+  <div id="wrapper">
+    <input type="text">
+    <button type="button">Add</button>
+  </div>
+
   <script src="script.js"></script>
 </body>
+
 </html>
